--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 body {
-    background-image: url('./img/paper.jpeg');
+    background-image: url('paper.jpeg');
 
 }
 
